NOCC 0.9.6    ??

    * Moved common stuff out of conf.php into a new 'common.php' file.
    * Replaced session_* calls with use of $_SESSION[].
    * Store 'lang' and 'theme' in session, to save passing them around
      in the URL all the time.
    * Fixed forwarding behaviour, so that original message is forwarded
      as a MIME attachment.
    * Exception from nocc_imap now returns useful error information.
    * Badly placed return statement was preventing connection
      exception from being reported to the user.
    * Moving to PEAR coding guidelines slowly (spaces instead of tabs, better
      comments should follow slowly).
    * Trim mail subjects when longer than 55 chars and displaying Inbox
      (patch thanks to Arno Bean #477829).
    * Fixed some regexp issues (patch thanks to Patrick #522389).
    * Added fix for mime encoding problem (#495626).
    * Fixed lang returning to default after prefs page.
    * Added 'allow_address_change' configuration parameter (patch #490576).
    * Seperated imap_* functions into a nocc_imap class for extendability.
    * Added HTTP headers to avoid caching from proxies and browsers.
    * Added request receipt feature.
    * Removed insecure 'X-Originating-Ip', and fixed 'X-Mailer' headers.
    * Conf is now passed as argument. It is no more included in functions.
    * Fixed a wrong url for prefs after sending a message (bug #493072).
    * Configuration parameters are now in an array ($conf).
    * Speed up a bit by using ' instead of " for remaining strings.
    * Added Croatian translation.
    * Added 'session_start' to top of action.php, as per advice from
      Karma Dorji.
    * Fixed some potential bugs on Win32 when sending message via
      SMTP (class_smtp.php).
    * Added exception handling when sending mail via PHP internal
      mail() function.
    * Gets signature/leadin string from a base64-encoded preference.
    * Added code to convert signature file to signature preference, if
      found.